--- a/livart/src/main/webapp/index.html
+++ b/livart/src/main/webapp/index.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="/livart/memberjoin">회원가입</a></li>
             <li><a href="/livart/membersave">회원저장 (redirect)</a></li>
-            <li><a href=>기능이름</a></li>
+            <li><a href="/livart/login">로그인 페이지</a></li>
             <li><a href=>기능이름</a></li>
         </ul>
     </li>
